--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,7 +44,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     /* background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 99%); */
 }
-
+/* Commons */
 a {
     text-decoration: none;
 }
@@ -66,7 +66,24 @@ button {
     margin: 0 auto;
     max-width: calc(100% - 130px);
 } /* size web*/
-
+.section__title {
+    color: var(--primary-color);
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 22px; /* 100% */
+}
+.section__desc {
+    color: var(--text-color);
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 24px; /* 171.429% */
+}
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 .btn {
     min-width: 107px;
     min-height: 26px;
@@ -106,14 +123,7 @@ button {
     top: 0px;
     z-index: 999;
 }
-.header-logo {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-.header-logo span {
-    color: var(--primary-color);
-}
+
 .main-header {
     width: 52%;
     display: flex;
@@ -171,7 +181,7 @@ button {
 .header__hero-content {
     display: flex;
     align-items: center;
-    flex-shrink: 1;
+    padding-bottom: 75px;
 }
 .header__hero-content::before {
     content: "";
@@ -192,7 +202,7 @@ button {
     width: 44%;
     padding-right: 76px;
 }
-.left__header-hero h2 {
+.left__header-hero h1 {
     color: var(--primary-color);
     width: 368px;
     font-family: "Public Sans";
@@ -257,11 +267,11 @@ button {
     border: 4px solid;
     transform: rotate(45deg);
 }
-.header__btn-vid:hover .header__btn-play {
-    background: var(--primary-color);
+.header__btn-vid:hover span {
+    color: #83a17d;
 }
 .header__btn-vid {
-    color: #152427;
+    color: var(--primary-color);
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 30px; /* 166.667% */
@@ -331,4 +341,106 @@ button {
     transform: rotate(180deg);
     position: absolute;
     right: -567px;
+}
+
+/* trademark */
+.trademark {
+    margin-top: 42px;
+}
+.trademark-bg {
+    width: 1140px;
+    height: 201px;
+    flex-shrink: 0;
+    border-radius: 100.5px;
+    background: #e2eddf;
+}
+.trademark-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 77px 122px;
+}
+.trademark-item a {
+    display: flex;
+    gap: 11px;
+    align-items: center;
+}
+
+/* services */
+.services {
+    margin-top: 105px;
+}
+.our-services::before {
+    content: "";
+    display: inline-block;
+    width: 25px;
+    height: 1px;
+    background: var(--primary-color);
+    margin-right: 21px;
+    position: relative;
+    top: -7px;
+}
+.services__row {
+    margin-top: 12px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+.services__heading {
+    width: 520px;
+    height: 104px;
+    flex-shrink: 0;
+    color: var(--primary-color);
+    font-size: 4.2rem;
+    font-weight: 600;
+    line-height: 52px; /* 123.81% */
+}
+.services__heading img {
+    display: inline-block;
+    margin: 10px;
+}
+.services__btn {
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    background: var(--btn-hover);
+}
+.services__btn:hover {
+    background: var(--primary-color);
+    color: #fff;
+}
+.service-right {
+    transform: rotate(180deg);
+    margin: 0 75px 10px 17px;
+}
+/* service__list */
+.service__list {
+    margin-top: 76px;
+    display: grid;
+    grid-gap: 16px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.service-item {
+    border-radius: 20px;
+    overflow: hidden;
+    cursor: pointer;
+}
+.service-item__thumb {
+    width: 100%;
+    height: 318px;
+}
+.service-item__info {
+    margin-top: 24px;
+    background: transparent;
+    transition: 0.3s;
+}
+.service-item__info p {
+    margin: 18px 60px 23px 0;
+}
+.service-item:hover {
+    box-shadow: -6px 9px 64px -4px rgba(118, 118, 118, 0.25);
+}
+.service-item:hover .service-item__info {
+    /* background: #fff; */
+    transform: translateX(18px);
 }
