--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
+    color: var(--text-color);
     font-size: 1.6rem;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
@@ -19,11 +20,12 @@ body {
 :root {
     --primary-color: #152427;
     --text-color: #575d5e;
+    --green-line-color: #83a17d;
     --btn-color: #143c3c;
     --btn-hover: #e2eddf;
 }
 
-/* Custom Scrollbars  */
+/* Custom Scrollbar  */
 /* width */
 ::-webkit-scrollbar {
     width: 8px;
@@ -40,10 +42,7 @@ body {
     background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 99%);
     border-radius: 10px;
 }
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    /* background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 99%); */
-}
+
 /* Commons */
 a {
     text-decoration: none;
@@ -66,17 +65,44 @@ button {
     margin: 0 auto;
     max-width: calc(100% - 130px);
 } /* size web*/
+.title-flag::before {
+    content: "";
+    display: inline-block;
+    width: 25px;
+    height: 1px;
+    background: var(--primary-color);
+    margin-right: 21px;
+    position: relative;
+    top: -7px;
+}
+.section__heading {
+    color: var(--primary-color);
+    font-size: 4.2rem;
+    font-weight: 600;
+    line-height: 52px; /* 123.81% */
+    position: relative;
+}
+.section__heading img {
+    display: inline-block;
+    margin: 10px 20px;
+}
 .section__title {
     color: var(--primary-color);
-    font-size: 2.2rem;
     font-weight: 600;
+    font-size: 2.2rem;
     line-height: 22px; /* 100% */
 }
-.section__desc {
-    color: var(--text-color);
+.section__desc-14 {
     font-size: 1.4rem;
-    font-weight: 500;
     line-height: 24px; /* 171.429% */
+}
+.section__desc-16 {
+    font-size: 1.6rem;
+    line-height: 26px;
+}
+.section__desc-18 {
+    font-size: 1.8rem;
+    line-height: 28px;
 }
 .line-clamp {
     display: -webkit-box;
@@ -203,17 +229,16 @@ button {
     padding-right: 76px;
 }
 .left__header-hero h1 {
-    color: var(--primary-color);
     width: 368px;
+    color: var(--primary-color);
     font-family: "Public Sans";
     font-size: 5rem;
     font-weight: 800;
     line-height: 60px; /* 120% */
 }
 .left__header-hero p {
-    color: var(--text-color);
     margin-top: 20px;
-    /* Paragraph/h2 18px medium */
+    color: var(--text-color);
     font-family: "Public Sans";
     font-size: 18px;
     font-style: normal;
@@ -243,11 +268,12 @@ button {
     position: relative;
 }
 .header__btn-play {
-    background: #83a17d;
+    background: var(--green-line-color);
     width: 44px;
     height: 44px;
     border-radius: 50%;
     position: relative;
+    transition: 0.3s;
 }
 
 .header__btn-side {
@@ -263,21 +289,22 @@ button {
     transition-duration: 0.3s;
 }
 
-.header__btn-vid:hover .header__btn-side {
-    border: 4px solid;
-    transform: rotate(45deg);
-}
-.header__btn-vid:hover span {
-    color: #83a17d;
-}
 .header__btn-vid {
     color: var(--primary-color);
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 30px; /* 166.667% */
 }
-.header__btn-vid:hover {
-    color: var(--btn-color);
+.header__btn-vid:hover .header__btn-side {
+    border: 4px solid;
+    transform: rotate(45deg);
+}
+.header__btn-vid:hover span {
+    color: var(--green-line-color);
+}
+
+.header__btn-vid:hover .header__btn-play {
+    transform: scale(1.2);
 }
 .play__video-icon {
     position: absolute;
@@ -370,16 +397,7 @@ button {
 .services {
     margin-top: 105px;
 }
-.our-services::before {
-    content: "";
-    display: inline-block;
-    width: 25px;
-    height: 1px;
-    background: var(--primary-color);
-    margin-right: 21px;
-    position: relative;
-    top: -7px;
-}
+
 .services__row {
     margin-top: 12px;
     display: flex;
@@ -389,16 +407,8 @@ button {
 .services__heading {
     width: 520px;
     height: 104px;
-    flex-shrink: 0;
-    color: var(--primary-color);
-    font-size: 4.2rem;
-    font-weight: 600;
-    line-height: 52px; /* 123.81% */
 }
-.services__heading img {
-    display: inline-block;
-    margin: 10px;
-}
+
 .services__btn {
     width: 54px;
     height: 54px;
@@ -443,4 +453,227 @@ button {
 .service-item:hover .service-item__info {
     /* background: #fff; */
     transform: translateX(18px);
+}
+
+/* about */
+.about {
+    margin-top: 150px;
+}
+.about-content {
+    display: flex;
+}
+.left__about {
+    max-width: 52%;
+}
+.left__about-main {
+    display: flex;
+    position: relative;
+}
+.left__about-data {
+    font-family: "Public Sans";
+    padding: 19px 23px 11px;
+    position: absolute;
+    bottom: 0;
+    right: -9px;
+    width: 143px;
+    height: 144px;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 7px 54px 0px rgba(154, 154, 154, 0.25);
+}
+.left__about-vector {
+    position: absolute;
+    top: -10px;
+    left: 80px;
+}
+.left__about-img {
+    display: flex;
+    gap: 21px;
+    margin-top: 9px;
+}
+
+.left__about-img img {
+    width: 285px;
+    height: 480px;
+    border-radius: 210px;
+    box-shadow: 0px 4px 234px 11px rgba(59, 137, 71, 0.25);
+}
+.left__about-img img:first-child {
+    margin-top: 90px;
+}
+.left__about-data h3 {
+    color: var(--primary-color);
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 14px; /* 100% */
+}
+.left__about-data p {
+    margin-top: 6px;
+    color: var(--text-color);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 14px; /* 140% */
+    opacity: 0.4;
+}
+.left__about-data .about__data-progress span {
+    padding-top: 10px;
+}
+.about__data-progress {
+    width: 100%;
+    width: 96px;
+    height: 2px;
+    margin: 3px 0;
+    background: #eaeaea;
+}
+.about__data-percent {
+    width: 96px;
+    height: 2px;
+    flex-shrink: 0;
+    background: var(--green-line-color);
+}
+.percent {
+    margin-top: 10px;
+}
+.left__about-data span {
+    float: right;
+    color: var(--primary-color);
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 14px; /* 140% */
+}
+.about__data-dot {
+    margin: 20px 0 0 -4px;
+}
+.about__data-team {
+    margin: 5px -6px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.about__data-team img {
+    margin-right: -6px;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+}
+
+.team__name-img {
+    display: flex;
+}
+
+/* right__about */
+.right__about {
+    margin-left: 64px;
+}
+.right__about .section__heading::after {
+    display: none;
+}
+.right__about-title {
+    margin-top: 20px;
+    width: 483px;
+}
+.right__about-desc {
+    margin-top: 11px;
+}
+.right-info {
+    display: flex;
+    margin-top: 36px;
+    /* position: relative; */
+}
+.right-info p {
+    width: 364px;
+    margin-left: 24px;
+}
+.right-info::after {
+    content: "";
+    display: block;
+    width: 485px;
+    height: 2px;
+    background: var(--green-line-color);
+    position: absolute;
+    bottom: -20px;
+}
+.right-info:nth-last-child(1) {
+    margin-top: 56px;
+}
+
+/* process */
+.process {
+    margin-top: 79px;
+    padding-top: 36px;
+}
+.process-heading {
+    margin-top: 20px;
+    width: 477px;
+}
+.process-heading img {
+    position: absolute;
+    right: -30px;
+    bottom: 10px;
+}
+.list__process {
+    margin-top: 81px;
+}
+.list__process-item:first-child {
+    position: relative;
+    height: 185px;
+}
+.list__process-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 157px;
+    padding: 20px 41px 20px 20px;
+    background: #fff;
+    border-bottom: 2px solid var(--green-line-color);
+    transition: 0.5s;
+}
+.list__process-info img {
+    position: absolute;
+    bottom: 0;
+    right: 92px;
+}
+
+.list__process-row {
+    margin-right: 64px;
+    color: var(--btn-color);
+    font-size: 7.2rem;
+    font-weight: 600;
+    line-height: 52px; /* 72.222% */
+}
+.list__process-item:hover {
+    border-radius: 33px;
+    background: var(--green-line-color);
+}
+.list__process-item:hover a {
+    display: block;
+}
+.process-name {
+    display: flex;
+
+    transition: 0.5s;
+}
+.process-name a {
+    margin-top: 12px;
+    color: var(--text-color);
+    display: none;
+    padding: 4px;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 18px; /* 100% */
+}
+.process-name a:hover {
+    color: #fff;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+.list__process-item:hover .process-name {
+    margin-left: 10px;
+}
+.list__process-info {
+    /* max-width: 50%; */
+    width: 572px;
 }
